Feat: Miscellaneous changes for the previous commits and some entity changes to existing tables
